# data_augmentation_sonio

./: .gitignore  LICENSE  README.md  conf.py  pyproject.toml
config/: conf.py  config.yaml
data/: fetcher.py  preprocessing.py  separate_modalities.py  separate_modalities_patho.py
data/M2_genAI_data/: process_segmentations.py
models/cvae/: cvae.py  train.py
models/sd_lora/: launch_slurm.sh  train.sh  train_text_to_image_lora.py
models/textual_inversion_healthy/: textual_inversion.py  train.sh
notebooks/: image_to_image.ipynb  pythae_default.ipynb  pythae_rhvae.ipynb  sd-healthy.ipynb  sd_lora.ipynb  sd_lora_patho.ipynb
src/echo-augmentation-sd/: generation_script.py
