[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-augmentation-cvae"
description = "A Python package for data augmentation of ultrasound foetal echography images using cVAEs"
authors = [
  {name = "Pierre-Louis Barbarant", email = "pierre-louis.barbarant@inria.fr"},
  {name = "Yasmine Daouia", email = "yasmine.daouia@universite-paris-saclay.fr"},
  {name = "Malek Ben-Salah", email = "malek.ben-salah@ensta-paris.fr"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.7",
    "scikit-learn>=1.2",
    "scikit-image>=0.20",
    "torch>=2.1.0",
    "tqdm>=4.62",
    "Pillow>=9.5",
    "pyraug>=0.0.6",
    "pythae>=0.1.2",
    "diffusers>=0.25.0",
    "datasets>=2.16.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1",
  "pre-commit>=2.0",
]

[project.urls]
homepage = "https://github.com/pbarbarant/data_augmentation_sonio"
repository = "https://github.com/pbarbarant/data_augmentation_sonio.git"
